// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-named-exports export-alias.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "exportedStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-named-exports property-name.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-named-exports re-export-name.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {},
}
`;
